    commandline argument, or dynamically turned on and off with the
    'Alt-l' key combo.

  * Modified '-framerate' commandline argument, where a non-zero value
    overrides the automatic framerate calculation (based on number of
    scanlines).  Setting 'framerate' to zero re-enables auto-frame
    calculation.  Also, re-enabled changing the framerate from within the
    UI.

  * Fixed issue with debugger disassembly and mirrored $40 TIA write
    addresses.  They were actually defined at $30, and generating incorrect
    labels.

  * Fixed issue in AtariVox and SaveKey controllers where accessing the
    EEPROM sometimes failed after the first write.

  * Changed AtariVox and SaveKey EEPROM emulation to default to $FF for
    a blank EEPROM.

  * Fixed regression in cart auto-detection logic; some F6 ROMs were being
    misdetected as E7.

  * Fixed issue with M6532/RIOT timer initialization; it was causing some
    ROMs to hang (most notably Summer Games).  Related to this, reworked
    the built-in random number generator to generate 'more' random numbers.

  * Fixed bug in CommandMenu where console buttons (Select, Reset, etc)
    weren't doing anything.

-Have fun!


2.5.1 to 2.6: (May 16, 2008)

  * Added AtariVox support using a real AtariVox device, where Stella
    sends data directly to the AtariVox.  For now, this is supported in
    Linux/UNIX, OSX, and Win32 only.  You'll obviously need a real
    AtariVox, and a serial<->USB adaptor to connect it to your system.
    Added '-avoxport' commandline argument used to set the serial port
    to which the AtariVox is connected.  Special thanks to Al Yarusso
    and Richard H. for providing sample hardware.

  * Added AtariVox and SaveKey EEPROM emulation.  This reads/writes data
    to a 32KB file, not to the actual hardware.  Very useful for testing
    EEPROM support without actually wearing out the real device.  Special
    thanks to J. Payson for providing the EEPROM emulation code, and A.